// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a success notification with no message correctly 1`] = `
<li
  className="src-modules-notification-components-notification__notification-success src-modules-notification-components-notification__notification"
  role="alert"
>
  <CloseButton
    ariaLabel="Close venue events viewer"
    onClick={[Function]}
    type="success"
  />
  <h4
    className="src-modules-notification-components-notification__title"
  >
    The Title
  </h4>
</li>
`;

exports[`should render an error notification with no title correctly 1`] = `
<li
  className="src-modules-notification-components-notification__notification-error src-modules-notification-components-notification__notification"
  role="alert"
>
  <CloseButton
    ariaLabel="Close venue events viewer"
    onClick={[Function]}
    type="error"
  />
  <p
    className="src-modules-notification-components-notification__message"
  >
    The Message
  </p>
</li>
`;
